agrego el menu de navegación, en la carpta img agrego imagen de ConceptoTec

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,35 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 h1 {
     color: red;
+}
+
+#menu{
+    height: 100%;
+    background: gray;
+    justify-content: space-between;
+}
+
+#menu ul li{
+    font-size: 18px;
+    display: inline-block;
+    margin: 0px 20px 0px 20px;
+    letter-spacing: 1px;
+    line-height: 70px;
+}
+
+#menu ul li a{
+    display: block;
+    color: black;
+    text-decoration: none;
+    transition: all 200ms;
+}
+
+#menu ul li a:hover{
+    color: #37bcf9;
+    transform: scale(1.2, 1.2);
 }
