--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,15 @@ h1 {
 }
 
 #menu {
+  display: flex;
   height: 100%;
   background: gray;
   justify-content: space-between;
+}
+
+.menu img {
+  width: 600px;
+  height: auto;
 }
 
 #menu ul li {
@@ -34,16 +40,35 @@ h1 {
   transform: scale(1.2, 1.2);
 }
 
+.bienvenido {
+  width: 100%;
+}
+
+.bienvenido img {
+  width: 100vw;
+  height: auto;
+}
+
+.container2 {
+  display: flex;
+}
+
+.container1 {
+  display: flex;
+  justify-content: space-around;
+}
+
 .card img {
-  width: 300px;
-  height: 350px;
+  width: 100%;
+  height: auto;
 }
 
 .card {
   position: relative;
-  width: 300px;
-  height: 350px;
+  width: 350px;
+  height: 400px;
   margin: 20px;
+  justify-content: space-between;
 }
 
 .card .face {
@@ -119,4 +144,79 @@ h1 {
 
 .card:hover .back {
   transform: perspective(600px) rotateY(360deg);
+}
+
+.container {
+  display: flex;
+}
+
+.licencias {
+  display: flex;
+}
+
+.licencias h2 {
+  text-align: center;
+}
+
+.productos {
+  display: flex;
+}
+
+.card2 {
+  width: 400px;
+  height: 500px;
+  margin: 50px;
+  margin-top: 80px;
+  box-shadow: 5px 5px 20px #000;
+  overflow: hidden;
+}
+
+.card2 img {
+  width: 450px;
+  height: 500px;
+  border-radius: 3px;
+}
+
+.intro {
+  height: 70px;
+  width: 250px;
+  padding: 6px;
+  box-sizing: border-box;
+  position: absolute;
+  bottom: 234px;
+  background: rgba(27, 27, 27, 0.5);
+  color: white;
+  transition: all 300ms;
+}
+
+.card2 h1 {
+  margin: 10px;
+  font-size: 40px;
+}
+
+.card2 p {
+  font-size: 20px;
+  margin: 20px;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.card2:hover {
+  cursor: pointer;
+  transition: all 300ms;
+}
+
+.card2:hover .intro {
+  height: 220px;
+  bottom: 234px;
+  background: rgba(27, 27, 27, 0.5);
+}
+
+.card2:hover p {
+  opacity: 1;
+  visibility: visible;
+}
+
+.card2:hover img {
+  transform: scale(1.1) rotate(-3deg);
 }/*# sourceMappingURL=style.css.map */
