--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,8 @@ h1 {
   justify-content: space-between;
 }
 
-.menu img {
-  width: 600px;
+#menu img {
+  width: 300px;
   height: auto;
 }
 
@@ -56,6 +56,7 @@ h1 {
 .container1 {
   display: flex;
   justify-content: space-around;
+  margin-top: 150px;
 }
 
 .card img {
@@ -65,10 +66,9 @@ h1 {
 
 .card {
   position: relative;
-  width: 350px;
-  height: 400px;
+  width: 530px;
+  height: 540px;
   margin: 20px;
-  justify-content: space-between;
 }
 
 .card .face {
@@ -163,27 +163,29 @@ h1 {
 }
 
 .card2 {
-  width: 400px;
+  width: 449px;
   height: 500px;
   margin: 50px;
   margin-top: 80px;
   box-shadow: 5px 5px 20px #000;
   overflow: hidden;
+  justify-content: space-around;
 }
 
 .card2 img {
-  width: 450px;
-  height: 500px;
+  width: 350px;
+  height: 365px;
   border-radius: 3px;
+  margin: 30px;
 }
 
 .intro {
   height: 70px;
-  width: 250px;
+  width: 449px;
   padding: 6px;
   box-sizing: border-box;
   position: absolute;
-  bottom: 234px;
+  bottom: -1040px;
   background: rgba(27, 27, 27, 0.5);
   color: white;
   transition: all 300ms;
@@ -208,7 +210,7 @@ h1 {
 
 .card2:hover .intro {
   height: 220px;
-  bottom: 234px;
+  bottom: -1040px;
   background: rgba(27, 27, 27, 0.5);
 }
 
