--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,13 +40,25 @@ h1 {
     transform: scale(1.2, 1.2);
 }
 
-.bienvenido {
+.bienvenidos {
     width: 100%;
 }
 
-.bienvenido img {
+.bienvenidos p{
+    font-size: 80px;
+    text-align: center;
+    align-items: center;
+}
+
+.bienvenidos img {
     width: 100vw;
     height: auto;
+}
+
+.especialidades p{
+    font-size: 30px;
+    text-align: center;
+    margin-top: 60px;
 }
 
 .container2 {
@@ -57,6 +69,11 @@ h1 {
     display: flex;
     justify-content: space-around;
     margin-top: 150px;
+}
+.container{
+    text-align: center;
+    margin-top: 200px;
+    font-size: 35px;
 }
 
 .card img {
@@ -146,27 +163,21 @@ h1 {
     transform: perspective(600px) rotateY(360deg);
 }
 
-.container {
-    display: flex;
-}
-
 .licencias {
     display: flex;
-}
-
-.licencias h2 {
     text-align: center;
 }
 
-.productos  {
-    display: flex;
+.licencias p {
+    font-size: 35px;
+    margin-top: 195px;
 }
 
 .card2 {
     width: 449px;
     height: 500px;
     margin: 50px;
-    margin-top: 80px;
+    margin-top: 350px;
     box-shadow: 5px 5px 20px #000;
     overflow: hidden;
     justify-content: space-around;
@@ -185,7 +196,7 @@ h1 {
     padding: 6px;
     box-sizing: border-box;
     position: absolute;
-    bottom: -1040px;
+    bottom: -2492px;
     background: rgb(27, 27, 27, .5);
     color: white;
     transition: all 300ms;
@@ -210,7 +221,7 @@ h1 {
 
 .card2:hover .intro {
     height: 220px;
-    bottom: -1040px;
+    bottom: -2492px;
     background: rgb(27, 27, 27, .5);
 }
 
@@ -220,5 +231,66 @@ h1 {
 }
 
 .card2:hover img {
+    transform: scale(1.1) rotate(-3deg);
+}
+
+.card3 {
+    width: 449px;
+    height: 500px;
+    margin: 50px;
+    margin-top: 80px;
+    box-shadow: 5px 5px 20px #000;
+    overflow: hidden;
+    justify-content: space-around;
+}
+
+.card3 img {
+    width: 350px;
+    height: 365px;
+    border-radius: 3px;
+    margin: 30px;
+}
+
+.intro2 {
+    height: 70px;
+    width: 449px;
+    padding: 6px;
+    box-sizing: border-box;
+    position: absolute;
+    bottom: -2492px;
+    background: rgb(27, 27, 27, .5);
+    color: white;
+    transition: all 300ms;
+}
+
+.card3 h1 {
+    margin: 10px;
+    font-size: 40px;
+}
+
+.card3 p {
+    font-size: 20px;
+    margin: 20px;
+    visibility: hidden;
+    opacity: 0;
+}
+
+.card3:hover {
+    cursor: pointer;
+    transition: all 300ms;
+}
+
+.card3:hover .intro2 {
+    height: 220px;
+    bottom: -2492px;
+    background: rgb(27, 27, 27, .5);
+}
+
+.card3:hover p {
+    opacity: 1;
+    visibility: visible;
+}
+
+.card3:hover img {
     transform: scale(1.1) rotate(-3deg);
 }
