--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,14 @@ h1 {
   color: red;
 }
 
+img {
+  max-width: 100%;
+}
+
 #menu {
   display: flex;
   height: 100%;
-  background: #28a3a5;
+  background: #0cba74;
   justify-content: space-around;
 }
 
@@ -55,6 +59,29 @@ h1 {
 
 .container2 {
   display: flex;
+  width: 95%;
+  margin: 0 auto;
+  padding: 20px;
+  margin-top: 50px;
+  margin-right: 20px;
+  justify-content: space-around;
+}
+
+.container2 img {
+  width: 600px;
+  flex-basis: calc(50% - 10px);
+}
+
+.contenido {
+  margin: 50px;
+  font-size: 25px;
+  flex-basis: calc(50% - 10px);
+}
+
+.titulo {
+  font-size: 32px;
+  text-align: center;
+  margin-top: 80px;
 }
 
 .container1 {
@@ -159,6 +186,9 @@ h1 {
 .licencias {
   display: flex;
   text-align: center;
+  font-size: 35px;
+  margin-top: 33px;
+  justify-content: space-between;
 }
 
 .licencias p {
@@ -178,7 +208,6 @@ h1 {
   margin-top: 350px;
   box-shadow: 5px 5px 20px #000;
   overflow: hidden;
-  justify-content: space-around;
 }
 
 .card2 img {
@@ -194,7 +223,7 @@ h1 {
   padding: 6px;
   box-sizing: border-box;
   position: absolute;
-  bottom: -2480px;
+  bottom: -2546px;
   background: rgba(27, 27, 27, 0.5);
   color: white;
   transition: all 300ms;
@@ -219,7 +248,7 @@ h1 {
 
 .card2:hover .intro {
   height: 220px;
-  bottom: -2480px;
+  bottom: -2546px;
   background: rgba(27, 27, 27, 0.5);
 }
 
@@ -257,7 +286,7 @@ h1 {
   padding: 6px;
   box-sizing: border-box;
   position: absolute;
-  bottom: -3380px;
+  bottom: -3179px;
   background: rgba(27, 27, 27, 0.5);
   color: white;
   transition: all 300ms;
@@ -282,7 +311,7 @@ h1 {
 
 .card3:hover .intro3 {
   height: 220px;
-  bottom: -3380px;
+  bottom: -3179px;
   background: rgba(27, 27, 27, 0.5);
 }
 
@@ -292,5 +321,69 @@ h1 {
 }
 
 .card3:hover img {
+  transform: scale(1.1) rotate(-3deg);
+}
+
+.card4 {
+  flex-grow: 1;
+  width: 425px;
+  height: 500px;
+  margin: 50px;
+  margin-top: 350px;
+  box-shadow: 5px 5px 20px #000;
+  overflow: hidden;
+  justify-content: space-around;
+  margin-top: 50px;
+}
+
+.card4 img {
+  width: 251px;
+  height: 237px;
+  border-radius: 3px;
+  margin: 30px;
+}
+
+.intro4 {
+  height: 70px;
+  width: 425px;
+  padding: 6px;
+  margin-left: 100px;
+  box-sizing: border-box;
+  position: absolute;
+  bottom: -3179px;
+  background: rgba(27, 27, 27, 0.5);
+  color: white;
+  transition: all 300ms;
+}
+
+.card4 h1 {
+  margin: 10px;
+  font-size: 40px;
+}
+
+.card4 p {
+  font-size: 20px;
+  margin: 20px;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.card4:hover {
+  cursor: pointer;
+  transition: all 300ms;
+}
+
+.card4:hover .intro4 {
+  height: 220px;
+  bottom: -3179px;
+  background: rgba(27, 27, 27, 0.5);
+}
+
+.card4:hover p {
+  opacity: 1;
+  visibility: visible;
+}
+
+.card4:hover img {
   transform: scale(1.1) rotate(-3deg);
 }/*# sourceMappingURL=style.css.map */
