--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ img {
   height: 100%;
   background: #0cba74;
   justify-content: space-around;
+  background-attachment: fixed;
 }
 
 #menu p {
@@ -157,6 +158,7 @@ img {
 
 .card .back .link {
   border-top: solid 1px #f3f3f3;
+  font-size: 25px;
   height: 50px;
   line-height: 50px;
 }
@@ -183,207 +185,53 @@ img {
   transform: perspective(600px) rotateY(360deg);
 }
 
-.licencias {
-  display: flex;
-  text-align: center;
-  font-size: 35px;
-  margin-top: 33px;
-  justify-content: space-between;
+#projects {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 304px);
+  grid-gap: 57px;
+  align-items: start;
+  margin-top: 72px;
+  padding-left: 86px;
 }
 
-.licencias p {
-  font-size: 35px;
-  margin-top: 195px;
+.project {
+  width: 322px;
+  height: 298px;
+  margin-bottom: 25px;
+  margin-right: 20px;
+  border: 1px solid #ccc;
+  margin-bottom: 30px;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
+}
+
+.project img {
+  width: 100%;
+  width: 320px;
+  height: 194px;
+}
+
+.project-info {
+  padding: 10px;
+}
+
+.project-info a {
+  font-size: 16px;
+  color: black;
+  transition: all 300ms;
+}
+
+.project-info a:hover {
+  color: green;
+}
+
+.project-info p {
+  font-size: 16px;
+  color: gray;
+  transition: all 300ms;
 }
 
 .productos {
-  display: flex;
-}
-
-.card2 {
-  flex-grow: 1;
-  width: 425px;
-  height: 500px;
-  margin: 50px;
-  margin-top: 350px;
-  box-shadow: 5px 5px 20px #000;
-  overflow: hidden;
-}
-
-.card2 img {
-  width: 251px;
-  height: 237px;
-  border-radius: 3px;
-  margin: 30px;
-}
-
-.intro {
-  height: 70px;
-  width: 425px;
-  padding: 6px;
-  box-sizing: border-box;
-  position: absolute;
-  bottom: -2546px;
-  background: rgba(27, 27, 27, 0.5);
-  color: white;
-  transition: all 300ms;
-}
-
-.card2 h1 {
-  margin: 10px;
-  font-size: 40px;
-}
-
-.card2 p {
-  font-size: 20px;
-  margin: 20px;
-  visibility: hidden;
-  opacity: 0;
-}
-
-.card2:hover {
-  cursor: pointer;
-  transition: all 300ms;
-}
-
-.card2:hover .intro {
-  height: 220px;
-  bottom: -2546px;
-  background: rgba(27, 27, 27, 0.5);
-}
-
-.card2:hover p {
-  opacity: 1;
-  visibility: visible;
-}
-
-.card2:hover img {
-  transform: scale(1.1) rotate(-3deg);
-}
-
-.card3 {
-  flex-grow: 1;
-  width: 425px;
-  height: 500px;
-  margin: 50px;
-  margin-top: 350px;
-  box-shadow: 5px 5px 20px #000;
-  overflow: hidden;
-  justify-content: space-around;
-  margin-top: 50px;
-}
-
-.card3 img {
-  width: 251px;
-  height: 237px;
-  border-radius: 3px;
-  margin: 30px;
-}
-
-.intro3 {
-  height: 70px;
-  width: 425px;
-  padding: 6px;
-  box-sizing: border-box;
-  position: absolute;
-  bottom: -3179px;
-  background: rgba(27, 27, 27, 0.5);
-  color: white;
-  transition: all 300ms;
-}
-
-.card3 h1 {
-  margin: 10px;
-  font-size: 40px;
-}
-
-.card3 p {
-  font-size: 20px;
-  margin: 20px;
-  visibility: hidden;
-  opacity: 0;
-}
-
-.card3:hover {
-  cursor: pointer;
-  transition: all 300ms;
-}
-
-.card3:hover .intro3 {
-  height: 220px;
-  bottom: -3179px;
-  background: rgba(27, 27, 27, 0.5);
-}
-
-.card3:hover p {
-  opacity: 1;
-  visibility: visible;
-}
-
-.card3:hover img {
-  transform: scale(1.1) rotate(-3deg);
-}
-
-.card4 {
-  flex-grow: 1;
-  width: 425px;
-  height: 500px;
-  margin: 50px;
-  margin-top: 350px;
-  box-shadow: 5px 5px 20px #000;
-  overflow: hidden;
-  justify-content: space-around;
-  margin-top: 50px;
-}
-
-.card4 img {
-  width: 251px;
-  height: 237px;
-  border-radius: 3px;
-  margin: 30px;
-}
-
-.intro4 {
-  height: 70px;
-  width: 425px;
-  padding: 6px;
-  margin-left: 100px;
-  box-sizing: border-box;
-  position: absolute;
-  bottom: -3179px;
-  background: rgba(27, 27, 27, 0.5);
-  color: white;
-  transition: all 300ms;
-}
-
-.card4 h1 {
-  margin: 10px;
-  font-size: 40px;
-}
-
-.card4 p {
-  font-size: 20px;
-  margin: 20px;
-  visibility: hidden;
-  opacity: 0;
-}
-
-.card4:hover {
-  cursor: pointer;
-  transition: all 300ms;
-}
-
-.card4:hover .intro4 {
-  height: 220px;
-  bottom: -3179px;
-  background: rgba(27, 27, 27, 0.5);
-}
-
-.card4:hover p {
-  opacity: 1;
-  visibility: visible;
-}
-
-.card4:hover img {
-  transform: scale(1.1) rotate(-3deg);
+  font-size: 25px;
+  text-align: center;
+  margin-top: 100px;
 }/*# sourceMappingURL=style.css.map */
