--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ img {
 
 #menu {
   display: flex;
+  flex-wrap: wrap;
   height: 100%;
   background: #0cba74;
   justify-content: space-around;
@@ -223,7 +224,7 @@ img {
 }
 
 .project-info a {
-  font-size: 16px;
+  font-size: 26px;
   color: black;
   transition: all 300ms;
 }
@@ -233,7 +234,7 @@ img {
 }
 
 .project-info p {
-  font-size: 16px;
+  font-size: 39px;
   color: gray;
   transition: all 300ms;
 }
