--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,6 +20,7 @@ img {
 
 #menu{
     display: flex;
+    flex-wrap: wrap;
     height: 100%;
     background: #0cba74;
     justify-content: space-around;
@@ -225,7 +226,7 @@ img {
 }
 
 .project-info a{
-    font-size: 16px;
+    font-size: 26px;
     color: black;
     transition: all 300ms;
 }
@@ -235,7 +236,7 @@ img {
 }
 
 .project-info p{
-    font-size: 16px;
+    font-size: 39px;
     color: gray;
     transition: all 300ms;
 }
