--- a/css/style.css
+++ b/css/style.css
@@ -26,12 +26,10 @@ img {
   background-attachment: fixed;
 }
 
-#menu p {
-  font-size: 50px;
+#menu img {
+  flex-wrap: wrap;
+  width: 450px;
   margin-top: 10px;
-  font-family: Arial, Helvetica, sans-serif;
-  color: #0065DB;
-  text-align: center;
 }
 
 #menu ul li {
@@ -60,6 +58,7 @@ img {
 
 .especialidades p {
   font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   margin-top: 60px;
 }
@@ -96,7 +95,7 @@ img {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin-top: 150px;
+  margin-top: 70px;
 }
 
 .container {
@@ -154,7 +153,7 @@ img {
 
 .card .back {
   transform: perspective(600px) rotateY(180deg);
-  background: rgb(3, 35, 54);
+  background: #0c6f47;
   padding: 15px;
   color: #f3f3f3;
   display: flex;
@@ -191,6 +190,10 @@ img {
 
 .card:hover .back {
   transform: perspective(600px) rotateY(360deg);
+}
+
+.productos {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #projects {
@@ -320,4 +323,33 @@ img {
   .container1 .card {
     width: 95%;
   }
+}
+.footer {
+  background: #333333;
+  font-family: sans-serif;
+}
+.footer .contenedor {
+  width: 90%;
+  margin: 0 auto;
+  padding: 20px 10px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer .logo {
+  flex-wrap: wrap;
+  width: 450px;
+  margin-top: 10px;
+}
+.footer .matricula, .footer .informacion {
+  color: #cdcdcd;
+  font-size: 18px;
+}
+.footer .informacion img {
+  width: 250px;
+}
+.footer .matricula:hover,
+.footer .informacion:hover {
+  color: white;
 }/*# sourceMappingURL=style.css.map */
